[gd_scene load_steps=14 format=3 uid="uid://cc3oxdvccshkj"]

[ext_resource type="Script" uid="uid://e7enuvutsgkh" path="res://characters/projectile.gd" id="1_hqja7"]
[ext_resource type="Texture2D" uid="uid://7r0ldnpfl5sr" path="res://characters/player/verkko.png" id="2_hqja7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hxwdh"]
atlas = ExtResource("2_hqja7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee6op"]
atlas = ExtResource("2_hqja7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l73h0"]
atlas = ExtResource("2_hqja7")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg887"]
atlas = ExtResource("2_hqja7")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y80rb"]
atlas = ExtResource("2_hqja7")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_s75y3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxwdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee6op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l73h0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rg887")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y80rb")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqja7"]
size = Vector2(15, 15)

[sub_resource type="Animation" id="Animation_ee6op"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:shape")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_hqja7")]
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hxwdh"]
size = Vector2(30.4056, 30.4056)

[sub_resource type="Animation" id="Animation_hqja7"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["default"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("RectangleShape2D_hqja7"), SubResource("RectangleShape2D_hxwdh")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hxwdh"]
_data = {
&"RESET": SubResource("Animation_ee6op"),
&"default": SubResource("Animation_hqja7")
}

[node name="Net" type="Area2D"]
collision_layer = 0
collision_mask = 12
script = ExtResource("1_hqja7")
point_at_velocity = false
fall_speed = 400.0

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_s75y3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -4.76837e-07)
rotation = 0.785398
shape = SubResource("RectangleShape2D_hqja7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hxwdh")
}
autoplay = "default"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
